Refactored a few variables/fields.  Removed some explicit exception handling in controller, moved to service classes.  Condensed some logic using method references and lambdas